# integration-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push-image.yml  ci.yml  deploy.yml  terraform-destroy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_job_params_column.py  004_add_disconnected_at_column.py  005_add_last_job_id_column.py  006_add_unique_constraints.py  007_add_integration_history.py  008_add_sample_data_tables.py  009_split_sync_cursors.py  010_equalize_version_vectors.py  011_rename_oauth_config_to_connection_config.py  012_add_scaling_indexes.py  013_seed_available_integrations.py  014_update_xero_integration.py  015_seed_system_default_settings.py  016_drop_external_id_from_sample_tables.py  017_add_audit_log_and_sync_overrides.py  018_add_browse_index.py  019_add_sample_items_table.py
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  dto.py  health.py  integrations.py  mappers.py  settings.py  sync_jobs.py
app/auth/: __init__.py  admin.py  dependencies.py  jwt.py
app/core/: __init__.py  config.py  dependency_injection.py  exceptions.py  logging.py  middleware.py  utils.py
app/domain/: __init__.py  entities.py  enums.py  interfaces.py
app/infrastructure/: __init__.py  feature_flags.py
app/infrastructure/adapters/: __init__.py  factory.py  http_client.py
app/infrastructure/db/: __init__.py  database.py  models.py  (+1 more)
app/integrations/: __init__.py
app/services/: __init__.py  integration_service.py  oauth_state_store.py  settings_service.py  sync_job_runner.py  sync_orchestrator.py
docs/: ADAPTER_SEPARATION_PLAN.md  API_REFERENCE.md  CODE_REVIEW_FINDINGS.md  DEPLOYMENT.md  INFRASTRUCTURE_ONBOARDING.md  SYNC_ARCHITECTURE.md  Xero_Integration_Plan.md
infra/shared/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: demo_sync_job.py  generate_test_data.py  init-database.sql  seed_sample_data.sql  start.sh  test_xero_bidirectional_sync.py
tests/: conftest.py
tests/integration/: test_scheduler_e2e.py  test_sync_e2e.py
tests/mocks/: __init__.py  adapters.py  encryption.py  feature_flags.py  repositories.py  scheduler.py
tests/unit/: test_adapters.py  test_admin_auth.py  test_admin_crud.py  test_api.py  test_auth.py  test_change_detection.py  test_config.py  test_domain.py  test_encryption.py  test_exceptions.py  test_feature_flags.py  test_health.py  test_integration_service.py  test_middleware.py  test_oauth_state.py  test_queue.py  test_quickbooks.py  test_scheduler.py  test_services.py  test_sync_job_runner.py  test_sync_orchestrator.py  test_sync_overrides.py  test_version_vectors.py  test_xero.py
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  MicroFrontend.tsx  federation.ts  index.css
(+95 files in other folders)
